# Developer-Blog

./: .gitignore  Cargo.toml  Developer-Blog.sln  Makefile.toml  README.md  check.sh  index.html  run.sh  run_client.sh  run_server.sh  rust-toolchain.toml  setup.sh
.github/workflows/: dotnet.yml  rust_ci.yml  rust_continuous_integration.yml
Server/: Program.cs  Program2.cs  Server.csproj
Server/Controllers/: BlogPostController.cs
Server/DataTransferObjects/: BlogPostDto.cs
Server/Models/: BlogPost.cs
Server/Repository/: BlogPostRepository.cs  Seeding.cs
ServerTests/: ServerTests.csproj  UnitTest1.cs
ServerTests/Controllers/: BlogPostControllerShould.cs
ServerTests/Repository/: BlogPostRepositoryShould.cs  SeedingShould.cs
business/: Cargo.toml
business/src/: controllers.rs  lib.rs  models.rs  path.rs
business/src/controllers/: blog_store.rs  profile_store.rs
business/src/models/: blog_post.rs  blog_store.rs  example.rs  id_blog_post.rs  id_profile.rs  pagination.rs  profile.rs  profile_store.rs  update_blog_post.rs  update_profile.rs
client_web/: Cargo.toml  index.html
client_web/src/: main.rs  style.rs
client_web/src/views/: content.rs  profiles.rs  view_switcher.rs
client_web/src/views/content/: blog.rs  blogs.rs
client_web/src/views/core/: home.rs
server/: Cargo.toml  Program.cs  api_endpoint_tests.md
server/DataTransferObjects/: BlogPostDto.cs
server/Models/: BlogPost.cs
server/src/: handlers.rs  main.rs  routes.rs
server/src/controllers/: profiles.rs
server/src/handlers/: blog_posts.rs  example.rs  profiles.rs
server/src/routes/: blog_posts_router.rs  example_router.rs  profiles_router.rs  router.rs  static_router.rs
server_tests/: ServerTests.csproj
shared/: Cargo.toml
shared/src/models/: profile.rs
src/: app.rs  components.rs  main.rs
src/client/: views.rs
src/components/: application.rs  core.rs  mod.rs  switch.rs  view_switcher.rs
src/components/content/: blog.rs
src/components/core/: application.rs  home.rs  mod.rs  navigation.rs
src/controllers/: blog_store.rs  mod.rs
src/models/: blog.rs  blog_post.rs  mod.rs
src/routes/: route.rs
src/server/: models.rs
