[package]
name = "developer-blog-client-web"
version = "0.2.0"
authors = ["Skippy <steelstone3@gmail.com>"]
edition = "2021"
homepage = "https://github.com/Steelstone3/Developer-Blog"
repository = "https://github.com/Steelstone3/Developer-Blog"
license = "GPLv3"
readme = "README.md"
include = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[dependencies]
yew = { version = "0.21", features = ["csr"] }
stylist = { version = "0.13", features = ["yew_integration"] }
serde = { version = "1.0", features = ["derive"] }
reqwasm = "0.5"
web-sys = "0.3"
