[package]
name = "developer-blog-server"
version = "0.4.2"
authors = ["Skippy <steelstone3@gmail.com>"]
edition = "2021"
homepage = "https://github.com/Steelstone3/Developer-Blog"
repository = "https://github.com/Steelstone3/Developer-Blog"
license = "GPLv3"
readme = "README.md"
include = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[dependencies]
axum = { version = "0.7" }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio = { version = "1", features = ["full"] }
developer-blog-business = { path = "../business" }
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
# surrealdb = "2"

# [dev-dependencies]
# anyhow = "1"
# httpc-test = "0"
